--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ services:
     ports:
       - 8000:8000
     environment:
+      - OPENAI_MODEL=gpt-4-turbo-preview      
       - WEAVIATE_URL_VERBA=http://weaviate:8080
-      - OPENAI_API_KEY=$OPENAI_API_KEY
+      - OPENAI_API_KEY=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
       ## IF YOU WANT AUTHENTICATION, UNCOMENT BELLOW 
       ## AND ADD WEAVIATE SERVICE
       #- WEAVIATE_API_KEY_VERBA=adminkey
@@ -54,7 +55,7 @@ services:
       retries: 5
       start_period: 10s
     environment:
-      OPENAI_APIKEY: $OPENAI_API_KEY
+      OPENAI_APIKEY: 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
       QUERY_DEFAULTS_LIMIT: 25
       AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
       PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
